Feat/security (#37)
* fix : 부스 카테고리 String -> enum 변경

* fix : 레디스 캐시 사용시, festival 직렬화/역직렬화 문제 해결

* fix : 위경도 float -> double로 변경

* fix : 위경도 float -> double로 변경

* fix : festival response에 디폴트 생성자 추가

* fix : security /api/booth 권한 수정

* fix : 메뉴등록 transactional 설정

* fix : 메뉴리스폰스 디폴트 생성자

* feat : exposedHeader에 RefreshToken 추가

* fix : 토큰 expiration minutes 단위로 변경

* fix : 썸네일은 선택사항으로 변경

* fix : cors허용 origin 추가