@@ -31,9 +31,13 @@ import java.util.List;
 @RequiredArgsConstructor
 //springsecurity 최신버전 (6.x)이상부터는 메서드체이닝을 지양하고 람다식을 통해 함수형으로 설계
 public class SecurityConfig{
+    private static final String APP_ADMIN = "https://www.unifest.app/";
+    private static final String LOCALHOST = "http://localhost:3000";
 
     private final AuthenticationConfiguration authenticationConfiguration;
+
     private final JwtTokenizer jwtTokenizer;
+
     private final RedisRepository redisRepository;
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception{
@@ -43,7 +47,7 @@ public class SecurityConfig{
                     @Override
                     public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
                         CorsConfiguration configuration = new CorsConfiguration();
-                        configuration.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
+                        configuration.setAllowedOrigins(List.of(LOCALHOST,APP_ADMIN));
                         configuration.setAllowedMethods(Collections.singletonList("*"));
                         configuration.setAllowCredentials(true);
                         configuration.setAllowedHeaders(Collections.singletonList("*"));
